assets/css/style.css
/* Import Fonts from Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General Styles */
body {
    background-image: url("../images/background.webp");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    font-family: 'Raleway', sans-serif;
}

main {
    margin-top: 50px;
}

button:hover {
    cursor: pointer;
}

/* Style to hide divs */
.hide {
    display: none !important;
}


/* Header Styles */
header {
    color: whitesmoke;
    font-family: 'Nerko One', sans-serif;
    text-transform: uppercase;
    text-shadow: black 5px 5px 2px;
    background-color: #005a00d3;
    letter-spacing: 2px;
    text-align: center;
    font-size: 150%;
    padding-top: 10px;
    padding-bottom: 10px;
}

header img {
    max-height: 200px;
    width: auto;
}

/* Main Game Screen Styles */
#main-screen {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

/* Introdution & Game Rules Box Styles */
#intro-container,
#game-rules-container,
#destination-section,
#correct-answer-container,
#incorrect-answer-container,
#win-container,
#game-over-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#game-intro,
#game-rules,
#destination-container,
#stats-container,
#correct-answer,
#incorrect-answer,
#game-win,
#game-over {
    background-color: whitesmoke;
    width: 80vw;
    max-width: 800px;
    height: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 20px 20px #005a00;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#correct-answer {
    max-width: 600px;
    box-shadow: 0 0 20px 20px #18e618;
}

#incorrect-answer {
    max-width: 600px;
    box-shadow: 0 0 20px 20px #ee0909;
}

#game-win-image,
#game-over-image {
    height: auto;
    max-width: 200px;
}

#stats-container,
#energy-container {
    max-width: 200px;
}

#game-rules p {
    text-align: left;
}

#intro-image-container {
    overflow: hidden;
    display: flex;
    justify-content: center;
}

#intro-image {
    border-radius: 40px;
    max-width: 400px;
    height: auto;
}

#play-button,
.play-again-button,
#rules-button,
#nextCounty-button,
#tryAgain-button {
    text-align: center;
    background-color: darkgreen;
    color: whitesmoke;
    border: black 2px solid;
    border-radius: 20px;
    padding: 7px;
    font-size: 125%;
}

/* Main Screen Sub-Container Styling */
#questions-section,
#stats-container,
#energy-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto 20px auto 20px;
}

/* Destination Question & Main Questions Styles */

#questions-container {
    background-color: whitesmoke;
    width: 80vw;
    max-width: 400px;
    height: auto;
    margin-top: 20px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 20px 20px #005a00;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#destination-answers-container,
#answers-container {
    display: grid;
}

.destination-answer,
.answer {
    text-align: center;
    font-size: 150%;
    background-color: darkgreen;
    color: whitesmoke;
    border: black 2px solid;
    border-radius: 20px;
    padding: 7px;
    margin: 5px 0 5px 0;
}

#hints {
    display: flex;
    justify-content: center;
}

#hints div {
    margin: 0 10px;
}

#hints img:hover {
    cursor: pointer;
}

/* Route & Energy Styling */
#route-container,
#energy-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#route {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background-color: whitesmoke;
    width: 80vw;
    height: auto;
    margin-top: 40px;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 20px 20px #005a00;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
}

#energy {
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
    width: 80vw;
    max-width: 200px;
    height: 400px;
    margin-top: 20px;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 20px 20px #005a00;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
}

#energy-tank {
    height: 210px;
    width: 75px;
    border: solid 2px black;
    background-image: url(../images/energy.jpg);
}

#energy-remaining {
    height: 150px;
    background-color: white;
}

/* Media query: tablets and smaller (970px and lower) */
@media screen and (max-width: 970px) {

    /* Header Styles */
    header {
        font-size: 100%;
    }

    /* Main Game Screen Styles */
    #main-screen {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    /* Main Screen Sub-Container Styling */
    #questions-section,
    #stats-container,
    #energy-container {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: auto 20px auto 20px;
    }

    #stats-container {
        order: 3;
        margin-top: 20px;
    }

    #energy {
        display: flex;
        flex-direction: column;
        background-color: whitesmoke;
        font-size: 125%;
        width: 80vw;
        max-width: 400px;
        height: auto;
        margin-top: 20px;
        padding: 20px;
        border-radius: 10px;
        box-shadow: 0 0 20px 20px #005a00;
        justify-content: space-evenly;
        align-items: center;
        text-align: center;
    }

    #energy h2 {
        display: none;
    }

    #energy-tank {
        display: none;
    }
}

/* Media query: larger devices (1720px and above) */
@media screen and (min-width: 1720px) {
    #questions-container {
        max-width: 700px;
    }

